@@ -56,3 +56,7 @@ x= 4.0 n= 1 iroot= 4.0
 x= 4.0 n= 2 iroot= 2.0
 x= 9.0 n= 1 iroot= 9.0
 x= 9.0 n= 2 iroot= 3.0
+ibeta(2.0, 0.0, 0.95)= 0.0
+ibeta(0.0, 1.0, 0.95)= 1.0
+ibeta(2.0, 0.0, 0.95, tail)= 1.0
+ibeta(0.0, 1.0, 0.95, tail)= 0.0
